--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "printWidth": 200,
-  "useTabs": true,
-  "singleQuote": true
+	"printWidth": 200,
+	"useTabs": true,
+	"singleQuote": true,
+	"semi": true
 }
